[metadata]
name = Toupy
version = attr: src.VERSION
description = Tomographic Utilities for Python
long_description = file: README.md, LICENSE
### long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = GPLv3 License
classifiers =
    License: : OSI Approved : : GPLv3 License
    Programming Language: : Python : : 3
        Topic:: Scientific/Engineering
        Topic:: Software Development
        Operating System:: Unix


[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
    bin/file_comp
    bin/missing_recons
    bin/create_toupy_templates
    bin/plot_projections
install_requires =
decorator >= 4.3
fabio >= 0.11.0
h5py >= 3.1.0
ipython >= 7.16.1
matplotlib >= 3.3.4
numpy >= 1.16.5
numexpr >= 2.6.9
scipy >= 1.5.4
pyFFTW >= 0.11.1
pyopencl>=2021.1.1
scikit-image >= 0.17.3
silx >= 0.9.0
sphinx >= 2.1.2

[options.package_data]
* = *.txt, *.rst
hello = *.msg
