[metadata]
name = Toupy
version = attr: src.VERSION
author = Julio Cesar da Silva",
author_email = julio-cesar.da-silva@neel.cnrs.fr,
description = Tomographic Utilities for Python
long_description = file: README.md, LICENSE
url = https://github.com/jcesardasilva/toupy
project_urls = 
	Bug Tracker = https://github.com/jcesardasilva/toupy/issues
license = GPLv3 License
classifiers =
    License: : OSI Approved : : GPLv3 License
	Operating System:: Unix
    Programming Language: : Python : : 3
        Topic:: Scientific/Engineering
        Topic:: Software Development
        


[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6
zip_safe = False
include_package_data = True
scripts =
    bin/file_comp
    bin/missing_recons
    bin/create_toupy_templates
    bin/plot_projections

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.rst
hello = *.msg
