[metadata]
name = Toupy
version = 0.2.2
author = Julio Cesar da Silva",
author_email = julio-cesar.da-silva@neel.cnrs.fr,
description = Tomographic Utilities for Python
long_description = file: README.md, LICENSE
url = https://github.com/jcesardasilva/toupy
project_urls = 
	Bug Tracker = https://github.com/jcesardasilva/toupy/issues
license = GPLv3 License
classifiers =
	Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: Unix

[options]
package_dir = 
	= toupy
packages = find:
python_requires = >=3.6
zip_safe = False
include_package_data = True
scripts =
    bin/file_comp
    bin/missing_recons
    bin/create_toupy_templates
    bin/plot_projections

[options.packages.find]
where = toupy

[options.package_data]
* = *.txt, *.rst
hello = *.msg
